fix partial overlap between photo credit and background shape

--- a/jsapp/scss/stylesheets/partials/_registration.scss
+++ b/jsapp/scss/stylesheets/partials/_registration.scss
@@ -370,6 +370,7 @@ form.registration--login > p > span.helptext{
 .registration__footer {
   clear: both;
   text-align: center;
+  margin: 30px;
   text-shadow: colors.$kobo-gray-900 0 0 2px; // contrast against photo background
 }
 
